Cover Java 24 language features
Co-authored-by: Michael Hoffer <info@michaelhoffer.de>